--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=email
 server.port=0
 
+spring.mail.host=smtp.sendgrid.netm
+spring.mail.port=587
+spring.mail.username=<login user to smtp server>
+spring.mail.password=<login password to smtp server>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.hostname=localhost
 eureka.client.fetch-registry=true
