--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=email
 server.port=0
 
-spring.mail.host=smtp.sendgrid.netm
+spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
-spring.mail.username=<login user to smtp server>
-spring.mail.password=<login password to smtp server>
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
